# highperf-parquet

./: CMakeLists.txt  README.md  ResearchPaper1.docx  run_all.sh
.cache/clangd/index/: adaptive.cc.A1158DFD2D64DDAD.idx  adaptive.h.81E9E2F37B80BF25.idx  benchmark_writer.cc.45FE2E930E97D12F.idx  bindings.cpp.728D2308926E8A2F.idx  bitpack.h.1BCF5FB752389335.idx  bitpack_simd.cc.9FE86DDA467F37DD.idx  bloom_filter.cc.1CCE02CF960EA849.idx  bloom_filter.h.8C03289F133038FF.idx  buffer.cc.E0F078F83550B503.idx  delta.h.38336FEC68B6AB5F.idx  delta_simd.cc.D1FA7DC67E806E80.idx  dict_encoding.cc.2E755272EAAB9F2C.idx  dict_encoding.h.CD4D80094C2ABDB0.idx  encoding_base.cc.D0320F872C0BCEA3.idx  encoding_base.h.5F7FC82445A2F444.idx  file_writer.cc.FCEF8B956D03432D.idx  gpu_compress.h.6F4DD8EB1DF46B6E.idx  gpu_compress_fallback.cc.F405E0B7F3E6C9AB.idx  parquet_layout.cc.88CDCD605A91F721.idx  parquet_metadata.cc.104C0945EF926B76.idx  rle.h.7FC92E7E7D9426E7.idx  rle_simd.cc.EB18A3E5971B37C1.idx  schema.cc.9AE47AA5AC1F88EE.idx  schema.h.85B42E3784407B9A.idx  test_adaptive.cc.C52BF7B0241BD2EE.idx  test_bloom.cc.83A602F193CB3E23.idx  test_delta.cc.C65F0E1348B65FBE.idx  test_dict.cc.20A717C8FD7FB847.idx  test_encodings.cc.FC465E7A69CA0173.idx  test_gpu_compress.cc.BC1FDDFA06779C3C.idx  test_writer.cc.7D334DE303F2B84C.idx  writer.cc.4485B677271966EE.idx  writer.h.957E386A362C0424.idx
benchmarks/: benchmark_writer.cc
docs/: index.html  style.css
include/hpq/: bloom_filter.h  schema.h  writer.h
include/hpq/encodings/: adaptive.h  bitpack.h  delta.h  dict_encoding.h  encoding_base.h  rle.h
include/hpq/gpu/: gpu_compress.h
python/hpq/: bindings.cpp
src/encodings/: adaptive.cc  bitpack_simd.cc  delta_simd.cc  dict_encoding.cc  encoding_base.cc  rle_simd.cc
src/format/: bloom_filter.cc  parquet_layout.cc  parquet_metadata.cc
src/gpu/: gpu_compress.cu  gpu_compress_fallback.cc  gpu_utils.cc
src/io/: buffer.cc  file_writer.cc
src/schema/: schema.cc
src/writer/: writer.cc
tests/cpp/: CMakeLists.txt  test_adaptive.cc  test_bloom.cc  test_delta.cc  test_dict.cc  test_encodings.cc  test_gpu_compress.cc  test_header.cc  test_writer.cc
